--- a/blueprints/automation/unbekannt3/hue-dimmer-switch-wled.yaml
+++ b/blueprints/automation/unbekannt3/hue-dimmer-switch-wled.yaml
@@ -12,9 +12,7 @@ blueprint:
           integration: mqtt
           manufacturer: Philips
           model:
-            - '929002398602'
-            - 'RWL021'
-            - 'RWL020'
+            - 'Hue dimmer switch'
     light_entity:
       name: Licht Entität
       description: Die Licht-Entität (z. B. eine WLED-Lichtgruppe), die gesteuert werden soll.
